# lab3

./: Makefile  Makefile.am  Makefile.in  calc.cpp  calc.h  config.status  configure  configure.ac  dockerfile  main.cpp  scriptA.sh  scriptB.sh  server  server.cpp  test_calculator.cpp  unit_test.cpp
.github/workflows/: build_tarball.yml  cpp-build.yml  debian-package.yml  docker-build-multi.yml  docker-build.yml  test.yml
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
debian/: changelog  changelog.in  control  control.in  rules  rules.in
