AC_INIT([Calculator Program], [1.0], [brukaliuk.serhii@lll.kpi.ua])
AC_CONFIG_AUX_DIR([build-aux])
AM_INIT_AUTOMAKE([foreign])

# Enable CC and CXX programs
AC_PROG_CC
AC_PROG_CXX

# Define the debian-specific packaging files
AC_CONFIG_FILES([Makefile debian/rules debian/control debian/changelog])

AC_OUTPUT

